<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="asyrkett.android.gozinta.SplitBillActivity"
    android:background="#ffA80F12"
    android:textColor="#ffffffff" >

    <EditText
        android:id="@+id/txtBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:textSize="25sp"
        android:hint="@string/bill_amount_hint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtNumPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBillAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:textSize="25sp"
        android:hint="@string/num_people_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNumPeople"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:textSize="25sp"
        android:text="@string/quality_text"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinServiceQuality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:entries="@array/ServiceQualities"
        android:prompt="@string/service_quality_prompt" />

    <Button
        android:id="@+id/btnCalculateTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinServiceQuality"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_black"
        android:text="@string/calculate_tip_button"
        android:textColor="#ffffffff"
        android:textSize="42sp"
        android:textStyle="bold" />

</RelativeLayout>
